WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143647
Scrollbars in composited overflow and iframes fail to render on Mac
https://bugs.webkit.org/show_bug.cgi?id=143647
Summary
Scrollbars in composited overflow and iframes fail to render on Mac
Simon Fraser (smfr)
Reported
2015-04-12 11:51:44 PDT
Scrollbars in composited overflow and iframes fail to render on Mac
Attachments
Patch
(2.02 KB, patch)
2015-04-12 11:53 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(2.08 KB, patch)
2015-04-12 11:54 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-04-12 11:53:34 PDT
Created
attachment 250614
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-04-12 11:54:30 PDT
Created
attachment 250615
[details]
Patch
WebKit Commit Bot
Comment 3
2015-04-12 13:29:44 PDT
Comment on
attachment 250615
[details]
Patch Clearing flags on attachment: 250615 Committed
r182673
: <
http://trac.webkit.org/changeset/182673
>
WebKit Commit Bot
Comment 4
2015-04-12 13:29:47 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5
2015-04-25 16:38:01 PDT
***
Bug 140178
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug