Scrollbars in composited overflow and iframes fail to render on Mac https://bugs.webkit.org/show_bug.cgi?id=143647 rdar://problem/20340544

Reviewed by Darin Adler.

When adding support for drawing scrollbars on the scrolling thread, we inadvertently
disabled scrollbar drawing in other composited, main-thread scrolling configurations.

Fix by having Scrollbar::supportsUpdateOnSecondaryThread() only return true if
the scrollable area is using async scrolling.

Sadly, we can't layout-test this.

* platform/Scrollbar.cpp:
(WebCore::Scrollbar::supportsUpdateOnSecondaryThread):


Canonical link: https://commits.webkit.org/161671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182673 268f45cc-cd09-0410-ab3c-d52691b4dbfc